moving rsk and adl to alumni page

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ image2.src = "images/img4.jpg"
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
   <button class="tablinks" onclick="openCity(event, 'Current_Research')">Research Team and Activities</button>
-<!--  <button class="tablinks" onclick="openCity(event, 'Alumni')">Alumni</button> -->
+   <button class="tablinks" onclick="openCity(event, 'Alumni')">Alumni</button>
   <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
   <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
   <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
@@ -381,65 +381,7 @@ Our research focuses on development of chemical kinetic models to describe oxida
 <tr>
 <td>
 
-<ul>
-<li> <h3>Kinetics of biodiesel surrogate components:</h3> 
-One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on recent experimental measurements and theoretical rate constant calculations. The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. 
-  <p style="clear: both;">  <center><img src="./current_research/biodiesel_aditya/mb_rcm_CNF.jpg" style="float: center; width: 68%; margin-right: 1%; margin-bottom: 0.5em;"></center><br>
-	 Thereafter, a novel approach is used to propose surrogates to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to investigate the use of biodiesels and its blends with diesel in CI engines.
-<p style="clear: both;"><!--Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>-->
- <center><img src="./current_research/biodiesel_aditya/ign_BDsurrogate.jpg" style="float: center; width: 38%; margin-right: 1%; margin-bottom: 0.5em;">
- <img src="./current_research/biodiesel_aditya/JSR_rme_sur1.jpg"   style="float: center; width: 40%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
-</br>
-<center>Fig: Ignition delays in a shock tube and Species profiles in a jet stirred reactor; symbols: experiments for biodiesel, lines: Surrogate
-	(presented at the 10th U.S. National Combustion Meeting, 2017)
-</center> 
 
-</br>	
-<!--Most of the available studies are on high temperature kinetics of methyl butanoate oxidation, while some differences are noted between existing ones at lower temperatures. We are collaborating with PTB, Germany to investigate this aspect using Rapid Compression Machines, through which ignition delays of methylbutanoate at the low and intermediate temperatures (T<1000 K), have been measured. Our present work focuses on with developing a kinetic model for methylbutanoate to explain these experimental observations in addition to the ones already in literature. -->	
-<!-- One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description.  The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. The effect of addition of low-temperature chemistry pathways to the methyl butanoate chemical kinetic mechanism has also been explored. A surrogate has been defined using a novel approach to represent a target biodiesel fuel. This surrogate has been employed in engine simulations and comparisons have been made for major combustion characteristics obtained using computations and experiments performed using a biodiesel powered CI engine. -->
-	
-<td width="15%">
-<center><img src="./images/Aditya_Lele.JPG" width="170">	
-</br>
-<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br></h4>
-	</center>
-<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras, on the broad topic of kinetic modeling and combustion simulations of biodiesel fuel. His thesis is co-advised by Dr. K. Anand at IIT Madras.</br>
-<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
-</td>
-</tr>
-<tr>
-<td>
-</ul>
-
-<ul>	
-<li> <h3>Extinction studies of oxygenated fuels:</h3>
- <center><img src="./current_research/oxygenates_rohit/diesel_blend_oxygenate.jpg"  style="float: right; width: 30%; margin-left: 2%; margin-bottom: 0.5em;"> </center> 
- Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. 
-</br> </br>
-<!-- </br> </br>
-<figure><center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
-<figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
- 
-<br><br> <center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
-In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
-</br> </br>
-To assess the validity of this reaction mechanism in non-premixed systems, extinction strain rates of  DME-air mixtures, which are not available in the literature, are measured in a counter-flow diffusion flame burner. Details on the experimental set up can be found <a href=https://www.dropbox.com/s/r92rqrpryb71g3j/CFDF_Burner.pdf?dl=0" target="_blank"> here</a>.
-</br> </br>
-The 23-species reaction mechanism is able to predict the experimental data for extinction within the uncertainty limits. This mechanism is further reduced by introducing quasi-steady state assumptions for six intermediate species to finally obtain a 14-step global kinetic scheme. A code is developed in MATLAB to obtain these 14 global steps and their corresponding rate expressions in terms of the elementary reaction rates. The 14-step mechanism performs as good as the 23-species mechanism for all the experimental data sets tested for.
-</br>	
-
-<td width="15%">
-<center><img src="./images/Rohit_Khare.jpg" width="170">	
-</br>
-<h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br></h4>
-<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-</center>
-Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras. His primary focus is on fundamental studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.</p></br>
-<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
-</td>
-</tr>
-</ul>
 
 <tr>
 <td>
@@ -576,18 +518,107 @@ Krunal obtained his B.E. in Mechanical Engineering from Government Engineering C
 </td>
 </tr>
 </table>
+</div>
 
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Alumni" class="tabcontent">
+	<center><img src="./images/logo.png" width="800">
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-<h2>Alumni</h2>
 <ul>
-<li> M. C. Sanjay (M. Tech 2017): <i> SMILES based interface to Thermodynamic Property Estimation Using THERM</br></i>
+<li> <h3>Kinetics of biodiesel surrogate components:</h3> 
+One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on recent experimental measurements and theoretical rate constant calculations. The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. 
+  <p style="clear: both;">  <center><img src="./current_research/biodiesel_aditya/mb_rcm_CNF.jpg" style="float: center; width: 68%; margin-right: 1%; margin-bottom: 0.5em;"></center><br>
+	 Thereafter, a novel approach is used to propose surrogates to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to investigate the use of biodiesels and its blends with diesel in CI engines.
+<p style="clear: both;"><!--Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>-->
+ <center><img src="./current_research/biodiesel_aditya/ign_BDsurrogate.jpg" style="float: center; width: 38%; margin-right: 1%; margin-bottom: 0.5em;">
+ <img src="./current_research/biodiesel_aditya/JSR_rme_sur1.jpg"   style="float: center; width: 40%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
+</br>
+<center>Fig: Ignition delays in a shock tube and Species profiles in a jet stirred reactor; symbols: experiments for biodiesel, lines: Surrogate
+	(presented at the 10th U.S. National Combustion Meeting, 2017)
+</center> 
+
+</br>	
+<!--Most of the available studies are on high temperature kinetics of methyl butanoate oxidation, while some differences are noted between existing ones at lower temperatures. We are collaborating with PTB, Germany to investigate this aspect using Rapid Compression Machines, through which ignition delays of methylbutanoate at the low and intermediate temperatures (T<1000 K), have been measured. Our present work focuses on with developing a kinetic model for methylbutanoate to explain these experimental observations in addition to the ones already in literature. -->	
+<!-- One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description.  The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. The effect of addition of low-temperature chemistry pathways to the methyl butanoate chemical kinetic mechanism has also been explored. A surrogate has been defined using a novel approach to represent a target biodiesel fuel. This surrogate has been employed in engine simulations and comparisons have been made for major combustion characteristics obtained using computations and experiments performed using a biodiesel powered CI engine. -->
+	
+<td width="15%">
+<center><img src="./images/Aditya_Lele.JPG" width="170">	
+</br>
+<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br></h4>
+	</center>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He obtained his Masters at IIT Madras in 2018, for his work on kinetic modeling of biodiesel surrogates and reacting flow simulations in CI engines. His thesis was co-advised by Dr. K. Anand at IIT Madras. He is currently pursuing his PhD at Penn State.</br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</td>
+</tr>
+<tr>
+<td>
+</ul>
+
+<ul>	
+<li> <h3>Extinction studies of oxygenated fuels:</h3>
+ <center><img src="./current_research/oxygenates_rohit/diesel_blend_oxygenate.jpg"  style="float: right; width: 30%; margin-left: 2%; margin-bottom: 0.5em;"> </center> 
+Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. 
+</br> </br>
+<!-- </br> </br>
+<figure><center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
+<figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
+ 
+<br><br> <center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
+In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
+</br> </br>
+To assess the validity of this reaction mechanism in non-premixed systems, extinction strain rates of  DME-air mixtures, which are not available in the literature, are measured in a counter-flow diffusion flame burner. Details on the experimental set up can be found <a href=https://www.dropbox.com/s/r92rqrpryb71g3j/CFDF_Burner.pdf?dl=0" target="_blank"> here</a>.
+</br> </br>
+The 23-species reaction mechanism is able to predict the experimental data for extinction within the uncertainty limits. This mechanism is further reduced by introducing quasi-steady state assumptions for six intermediate species to finally obtain a 14-step global kinetic scheme. A code is developed in MATLAB to obtain these 14 global steps and their corresponding rate expressions in terms of the elementary reaction rates. The 14-step mechanism performs as good as the 23-species mechanism for all the experimental data sets tested for.
+</br>	
+
+<td width="15%">
+<center><img src="./images/Rohit_Khare.jpg" width="170">	
+</br>
+<h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br></h4>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is obtained his Masters at IIT Madras in 2018, for his work on fundamental experimental and computational studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis was co-advised by Dr. V. Raghavan at IIT Madras. He is currently pursing his PhD with Dr. Alexandra Loukou at Karlsruhe Institute of Technology.</p></br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</td>
+</tr>
+</ul>
+<br><br>
+
+<tr>
+<td>
+<ul>	
+<li> <h3>SMILES based interface to Thermodynamic Property Estimation Using THERM:</h3>
+</td>
+</tr>
+</ul>
+
+<tr>
+<td>
+<ul>	
+<li> <h3>Reaction mechanism optimization:</h3>
+</td>
+</tr>
+</ul>
+
+<tr>
+<td>
+<ul>	
+<li> <h3>Fast multi-component diffusion within FlameMaster:</h3>
+</td>
+</tr>
+</ul>
+
+<!--<li> M. C. Sanjay (M. Tech 2017): <i> SMILES based interface to Thermodynamic Property Estimation Using THERM</br></i>
 <li> T. V. Vaisakh (M. Tech 2017): <i> Reaction mechanism optimization </i></br>
 <li> Kiran Kumar Yalamanchi (Dual Degree 2017)
 <li> Ankit Jain (Dual Degree 2017)
 </ul>
+-->
 </td>
 </tr>
 </table>
