--- a/index.html
+++ b/index.html
@@ -314,11 +314,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </td>
 </tr>
 </table>
-
-<!-- 
-<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
-<h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>
--->
+ 
+<h2> <a href="project_writeup/MS_PhD_Winter_2018.html" target="_blank"> <center><i>Abstracts for topics floated for MS admissions (Winter 2018)</i></center></a></h2>
+<!--<h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>-->
 
 <h1><center> Research highlights </center></h1>
 <!-- Slide show from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow-->
