--- a/project_writeup/MS_PhD_Winter_2018.html
+++ b/project_writeup/MS_PhD_Winter_2018.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-<title>Abstracts for topics listed for M.S admissions 2018</title>
+<title>Abstract for topic listed for M.S admissions 2018</title>
 <head>
 <style type="text/css">
-body{color:black}
+body{color:white}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
-A:hover{color:red}
-h2   {color: blue;}
-h3  {color: black;}
-}
-table, th, td {
-    border: 1px solid black;
-}
+A:hover{color:pink}
+h2   {color: pink;}
+h3   {color: lightblue;}
+h4   {color: lightblue;}
 </style>
-<!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,24 +26,29 @@ table, th, td {
 </script>
 </head>
 
-<center><h2> Topics for MS programme</h2></center>
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
-<tr>
+<center><h2> Topic for MS programme</h2></center>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 
 <tr>
 <td width="100%">
-<h3> Reduced Reaction Models For Combustion </h3> 
-Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representations of these schemes are essential. This project involves developing a black box tool to reduce reaction mechanisms based on existing ideas as the first step. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
+	<center><h3> Implementing algorithms for mechanism reduction </h3> </center>
+		
+<body bgcolor = "black">
+<h3>Abstract</h3>
+
+Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. This project initially involves developing a black box tool to reduce reaction mechanisms based on existing ideas. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
 
 
 <h3>Pre-requisite</h3>
-Penchant for writing stand-alone codes and interest in combustion
 
-<h3>Note:</h3>
-The applicant must be GATE qualified, and must be recruited by the IITM admission committee. The work will be initially funded for a year under the NHRTA mode.
-</td>
-</tr>
-</table>
+Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of pointers, classes, inheritance, memory handling), and interest in combustion. 
 
+<!-- <h2>Reading</h2> -->
+<!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
+<!-- http://www.tandfonline.com/doi/abs/10.1080/13647830802245177 -->
+
+The applicant must be GATE qualified, and must be selected by the MS admission process at IIT Madras. The research will be funded for the first year under the non-HTRA mode.
+  </tr>
+  </table>
+  
 </body></html>
