--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ image2.src = "images/img4.jpg"
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
   <button class="tablinks" onclick="openCity(event, 'Current_Research')">Research Team and Activities</button>
-   <button class="tablinks" onclick="openCity(event, 'Alumni')">Alumni</button>
+  <button class="tablinks" onclick="openCity(event, 'Alumni')">Alumni</button>
   <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
   <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
   <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
@@ -370,17 +370,14 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <td>
 <h2 id="Group">Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
-Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
+Our research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. Some work carried out by our alumni are showcased <a href="#" onclick="openCity(event, 'Alumni')">here</a>.
+
 </br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic. Please note that I am *not* interested in hiring interns.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
 </td>
 </tr>
-<tr>
-<td>
-
-
 
 <tr>
 <td>
@@ -397,13 +394,11 @@ Our research focuses on development of chemical kinetic models to describe oxida
 </br>
 </br>
 	<!--<img src="./current_research/mma_shanmugasundaram/LFF_plot_1.jpg" width="425">	<img src="./current_research/mma_shanmugasundaram/LFF_plot_2.jpg" width="415">	</br> -->
- </br>
+
 	<!--Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
 data of major species, dashed lines: simulations-->
-</br>
-</center> 
-</br>	
-	<td width="15%">
+
+<td width="15%">
 	<center><img src="./images/Shanmugasundaram.jpg" width="150">	
 	</br>
 	<h4>Shanmugasundaram D</h4>
