me1100: pull down notice

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -53,6 +53,8 @@ h3{
 
 <body bgcolor = "black">
 
+<center><h1>Nov 26th -- The materials hosted on this site will be pulled down in a day.</h1><center>
+	
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
 
