me1100: pull down notice

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ One of our recent interests concerns with developing a kinetic scheme for a smal
 <h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br></h4>
 	</center>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He obtained his Masters at IIT Madras in 2018, for his work on kinetic modeling of biodiesel surrogates and reacting flow simulations in CI engines. His thesis was co-advised by Dr. K. Anand at IIT Madras. He is currently pursuing his PhD at Penn State.</br>
+Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He received his Masters at IIT Madras in 2018, for his work on kinetic modeling of biodiesel surrogates and reacting flow simulations in CI engines. His thesis was co-advised by Dr. K. Anand at IIT Madras. He is currently pursuing his PhD at Penn State.</br>
 <!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 </tr>
@@ -576,7 +576,7 @@ The 23-species reaction mechanism is able to predict the experimental data for e
 <h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br></h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is obtained his Masters at IIT Madras in 2018, for his work on fundamental experimental and computational studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis was co-advised by Dr. V. Raghavan at IIT Madras. He is currently pursing his PhD with Dr. Alexandra Loukou in the Combustion Technology sub-division of Engler-Bunte-Institute at Karlsruhe Institute of Technology.</p></br>
+Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He received his Masters at IIT Madras in 2018, for his work on fundamental experimental and computational studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis was co-advised by Dr. V. Raghavan at IIT Madras. He is currently pursing his PhD with Dr. Alexandra Loukou in the Combustion Technology sub-division of Engler-Bunte-Institute at Karlsruhe Institute of Technology.</p></br>
 <!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 </tr>
