me1100: leave only my materials

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -52,8 +52,6 @@ h3{
 </head>
 
 <body bgcolor = "black">
-
-<center><h2>Nov 26th 2018: The materials hosted on this site will be pulled down in a day.</h2><center>
 	
 <center> <h1> ME1100: Undergraduate thermodynamics <br>
 Jul-Nov 2018 </h1>
@@ -105,7 +103,7 @@ Calvin's view of entropy
 <table border="1" cellspacing="5" cellpadding="5" width="100%">
 <tr>
 <td width="50%">
-<h2>Lecture materials, Handouts, Exams </h2>
+<!-- ><h2>Lecture materials, Handouts, Exams </h2>
 
 <h3>Course Lectures </h3>
 <ul>	
@@ -113,6 +111,7 @@ Calvin's view of entropy
 <li><a href="https://owncloud.iitm.ac.in/index.php/s/K17xxuNZaEYar2g" target="_blank">Chapter 8 of notes from Prof. TS </a>
 <br><br>
 	</ul>
+-->
 
 <h3> Lecture summary </h3>
 <ul>	<li>	 	
@@ -126,7 +125,7 @@ Calvin's view of entropy
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/zGVDcj8D1yS5VXx" target="_blank">Heat & Work in Internally Reversible, Steady-State Flow Processes</a><br> <br>
 	</ul>
 	
-<h3> Property tables: same as on moodle </h3>
+<!-- <h3> Property tables: same as on moodle </h3>
 <ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a><br> <br>
 	</ul>
 
@@ -156,11 +155,12 @@ Calvin's view of entropy
 	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
 	<li> Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/d0S4lWLGxfvIL79" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/cN9SDuxGuLAml0r" target="_blank">Solutions</a> 
 <br></ul>
+-->
 </td>
 
 
 <td width="50%">
-<h2>Tutorials and Problem sheets </h2>
+<!--<h2>Tutorials and Problem sheets </h2>
 <h3> Tutorials: same as on moodle </h3>
 <ul>
 	<li>Tutorial 1: 	
@@ -193,6 +193,7 @@ Calvin's view of entropy
   <li> Problem Set 16: <a href="https://owncloud.iitm.ac.in/index.php/s/ePv57kPYclfFPHT" target="_blank">Cycles</a> 
 	  <br><br>
 </ul>
+-->
 
 <h3> Additional problem sheets </h3>
 <ul>
