me6060: add my materials

--- a/teaching/ME6060_Jul_Nov_2017.html
+++ b/teaching/ME6060_Jul_Nov_2017.html
@@ -61,7 +61,12 @@ Jul-Nov 2017 </h1>
 <h2>Tutorial sheets </h2>
 <ul>
 <li> <a href="https://owncloud.iitm.ac.in/index.php/s/aY2c71BzL2J5nj0" target="_blank">Tutorial 1</a><br>
-	</ul>
+<li> <a href="https://owncloud.iitm.ac.in/index.php/s/cAMNq7Y35lBE9Ba" target="_blank">Tutorial 2</a><br>
+<li> <a href="https://owncloud.iitm.ac.in/index.php/s/bbkIeYYwlavx3Tw" target="_blank">Tutorial 3</a><br>
+<li> <a href="https://owncloud.iitm.ac.in/index.php/s/0zuorEEswMF1rbF" target="_blank">Tutorial 4</a><br>
+<li> <a href="https://owncloud.iitm.ac.in/index.php/s/p0bYTcRmOYrDdlV" target="_blank">Tutorial 5</a><br>
+<li> <a href="https://owncloud.iitm.ac.in/index.php/s/f2LITYHm3LVPj76" target="_blank">Tutorial 6</a><br>
+</ul>
 
 </td>
 </tr>
