--- a/index.html
+++ b/index.html
@@ -954,15 +954,17 @@ Write-up coming soon ...
 <td>
 	
 <ul>
-<li>	ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents</a><br>
-		<i>Jan-May 2016</i><br>
-		<i>Jan-May 2017</i><br>
-		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
 		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br><br>
+<li>	ME5107/ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents</a><br>
+		<i>Jan-May 2016</i><br>
+		<i>Jan-May 2017</i><br>
+		<i>Jan-May 2018</i><br><br>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
-		<i><a href="teaching/ME6060_Jul_Nov_2017.html" target="_blank">Jul-Nov 2017</i><br><br>
+		<i><a href="teaching/ME6060_Jul_Nov_2017.html" target="_blank">Jul-Nov 2017</a></i><br><br>
+<li>	ME6110: Combustion Technology - <a href="teaching/outline_ME6110.pdf" target="_blank">Course contents</a><br>
+		<i><a href="teaching/ME6110_Jan_May_2019.html" target="_blank">Jan-May 2019</a></i><br><br>
 </ul>
 
 </td>
