--- a/project_writeup/MS_PhD_Winter_2018.html
+++ b/project_writeup/MS_PhD_Winter_2018.html
@@ -47,7 +47,7 @@ Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of p
 <!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
 <!-- http://www.tandfonline.com/doi/abs/10.1080/13647830802245177 -->
 
-The applicant must be GATE qualified, and must be selected by the MS admission process at IIT Madras. The research will be funded for the first year under the non-HTRA mode.
+The applicant must be GATE qualified, and must be selected by the MS admission process at IIT Madras.
   </tr>
   </table>
   
