--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ image2.src = "images/img4.jpg"
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
 <a href="#" onclick="openCity(event, 'Current_Research')"> Computational Chemistry & Combustion group</a>,<br>
-Thermodynamics and Combustion Engines Lab,<br>
+Thermodynamics and Combustion Engineering Lab,<br>
 <a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a>,<br>
 <a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a>,<br>
 Chennai - 600036<br>
@@ -576,7 +576,7 @@ The 23-species reaction mechanism is able to predict the experimental data for e
 <h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br></h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He received his Masters at IIT Madras in 2018, for his work on fundamental experimental and computational studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis was co-advised by Dr. V. Raghavan at IIT Madras. He is currently pursing his PhD with Dr. Alexandra Loukou in the Combustion Technology sub-division of Engler-Bunte-Institute at Karlsruhe Institute of Technology.</p></br>
+Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He received his Masters at IIT Madras in 2018, for his work on fundamental experimental and computational studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis was co-advised by Dr. V. Raghavan at IIT Madras. He is currently pursing his PhD with Dr. Alexandra Loukou and Prof. Dr.-Ing. Dimosthenis Trimis in the Combustion Technology department of the Engler-Bunte-Institute at Karlsruhe Institute of Technology.</p></br>
 <!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 </tr>
