adding drgep notes

--- a/academics/academics.html
+++ b/academics/academics.html
@@ -34,12 +34,13 @@ table, th, td {
 <body bgcolor = "black">
 
 <center><h2>Perspectives, Review articles, Opinions</h2></center>
-In this space, I intend to put up all the articles of academic interest that I read carefully, and the opinions (if any) that I form therefrom. This saves me trouble to preserve the sheets and allows me to recall the materials as and when I so desire.<br>
+In this space, I intend to put up all the articles of academic interest that I read carefully, and the opinions (if any) that I form therefrom. This saves me trouble to preserve the sheets and allows me to recall the materials as and when I so desire. If you find any errors/blunders in these documents, I would be most pleased if you could bring them to my notice. <br>
 
 <br><br>
 Perspectives: <ul> 
-<li> <a href="https://www.dropbox.com/s/x0l09l5qkrdz5pd/Kalghatgi_is_it_end_of_ICE.pdf?dl=0" target="_blank"> Is it really the end of ICE?</a> - <a href="https://www.dropbox.com/s/sgt9v9y0btnbmtk/Notes_Kalghatgi_ICE.pdf?dl=0" target="_blank">Notes</a>
+<li> <a href="https://www.dropbox.com/s/x0l09l5qkrdz5pd/Kalghatgi_is_it_end_of_ICE.pdf?dl=0" target="_blank">Is it really the end of ICE?</a> - <a href="https://www.dropbox.com/s/sgt9v9y0btnbmtk/Notes_Kalghatgi_ICE.pdf?dl=0" target="_blank">Notes</a>
 </li>
+<li> <a href="https://pepiot.mae.cornell.edu/pdf/Pepiot_DRGEP_CF_2008.pdf" target="_blank">DRGEP</a> - <a href="https://www.dropbox.com/s/4ln99nyinflcn0l/DRGEP_Notes.pdf?dl=0" target="_blank">Notes</a>
 </ul>
 
 </body></html>
