rohits second paper with us

--- a/index.html
+++ b/index.html
@@ -713,8 +713,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel1">
 	<ul style="list-style-type:square">
-	<li><a href="
-https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
+	<li><a href="https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
 	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li>
 	<li><a href="https://doi.org/10.1080/00102202.2018.1535492" target="_blank">Journal version</a></li>
 	<li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
@@ -728,11 +727,13 @@ https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
 
 
 <div id="flip6">
-	<li> Gerald Mairinger, Rohit Sanjay Khare, Krithika Narayanaswamy, Martin Hunyadi-Gall, Vasudevan Raghavan, Kalyanasundaram Seshadri, "Experimental and Computational Investigation of the Influence of Stoichiometric Mixture Fraction on Structure and Extinction of Laminar, Nonpremixed Methoxymethane Flames", Combustion Theory and Modelling (accepted)
+	<li> Gerald Mairinger, Rohit Sanjay Khare, Krithika Narayanaswamy, Martin Hunyadi-Gall, Vasudevan Raghavan, Kalyanasundaram Seshadri, "Experimental and Computational Investigation of the Influence of Stoichiometric Mixture Fraction on Structure and Extinction of Laminar, Nonpremixed Methoxymethane Flames", Combustion Theory and Modelling (2018)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
+	<li><a href="https://www.tandfonline.com/eprint/HcguX4ZxxnksmKjiupZm/full" target="_blank">e-print</a></li>
 	<li><a href="https://www.dropbox.com/s/pdlncccqzw3af2z/seshadri_dme_ctm.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://doi.org/10.1080/13647830.2018.1551577" target="_blank">Journal version</a></li>	
 	<li><a href="https://www.dropbox.com/s/xjgw14625jtc9yw/kinetic_analysis_RK_KN.pdf?dl=0" target="_blank">Supplementary document</a></li>
 </ul>
 </div>
