ME6110: early commit

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -42,8 +42,8 @@ Jan-May 2019 <br>
 <table border="1" cellspacing="5" cellpadding="5" width="100%">
 	<td width="100%">
 	<center>
-		<h2><a href="?" target="_blank">Course contents</a></h2> 
-<h2> Instructor office hours: Wednesdays 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </h2></center> <br>
+		<h2><a href="https://owncloud.iitm.ac.in/index.php/f/03456428" target="_blank">Course contents</a></h2> 
+<h2> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </h2></center> <br>
 </center>
 	</td>
 </table>
